fixed sidedrawer nav item alignment

--- a/src/css/NavigationItems.module.css
+++ b/src/css/NavigationItems.module.css
@@ -5,7 +5,7 @@
   list-style: none;
   /* flex-flow: dictates how flex items are placed in the flex container defining main axis and direction */
   /* flex-flow: row; */
-  display: flex;
+  flex-flow: column;
   align-items: center;
   height: 100%;
 }
